# libjoscar

./: .gitignore  .gitmodules  CMakeLists.txt  java_createHeader.sh
java/: build.xml
java/src/de/funroll_loops/oscar/: Base.java  CorruptDataException.java  Exception.java  GeoHierarchySubSet.java  OsmCompleter.java  OsmItem.java  OsmKeyValueObjectStore.java  StringTable.java  TypeMissmatchException.java  VersionMissmatchException.java
java/src/de/funroll_loops/oscar/nc/: Base.java  BaseInterface.java  GeoHierarchySubSet.java  Helpers.java  OsmCompleter.java  OsmItem.java  OsmKeyValueObjectStore.java  StringTable.java
native/src/: ObjectStore.h  creationHelpers.h  de_funroll_loops_oscar_nc_GeoHierarchySubSet.cpp  de_funroll_loops_oscar_nc_GeoHierarchySubSet.h  de_funroll_loops_oscar_nc_Helpers.cpp  de_funroll_loops_oscar_nc_Helpers.h  de_funroll_loops_oscar_nc_OsmCompleter.cpp  de_funroll_loops_oscar_nc_OsmCompleter.h  de_funroll_loops_oscar_nc_OsmItem.cpp  de_funroll_loops_oscar_nc_OsmItem.h  de_funroll_loops_oscar_nc_OsmKeyValueObjectStore.cpp  de_funroll_loops_oscar_nc_OsmKeyValueObjectStore.h  de_funroll_loops_oscar_nc_StringTable.cpp  de_funroll_loops_oscar_nc_StringTable.h  exceptionhelpers.cpp  exceptionhelpers.h  helpers.cpp  helpers.h  types.h
